--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuantForge IO | Next-Gen Algorithmic Trading</title>
-    <!-- استفاده از فونت مدرن و تکنولوژیک Outfit -->
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700;900&display=swap" rel="stylesheet">
     <style>
         :root {
             --bg: #050505;
-            --glass: rgba(255, 255, 255, 0.03);
+            --glass: rgba(15, 15, 20, 0.4);
             --glass-border: rgba(255, 255, 255, 0.08);
             --cyan: #00f2fe;
             --purple: #4facfe;
@@ -29,14 +28,28 @@
             min-height: 100vh;
         }
 
-        /* Ambient Holographic Background Orbs */
+        /* Live Trading Chart Background */
+        .chart-bg {
+            position: fixed;
+            top: -5%;
+            left: -5%;
+            width: 110vw;
+            height: 110vh;
+            z-index: -4;
+            opacity: 0.25; /* شفافیت چارت برای خوانایی متن‌ها */
+            pointer-events: none; /* جلوگیری از تداخل چارت با کلیک‌های موس */
+            filter: contrast(1.2) grayscale(0.2); /* کمی تنظیم رنگ برای هماهنگی با تم دارک */
+        }
+
+        /* Ambient Holographic Background Orbs (Kept for the Web3 vibe) */
         .orb {
             position: absolute;
             border-radius: 50%;
-            filter: blur(100px);
-            z-index: -1;
+            filter: blur(120px);
+            z-index: -2;
             animation: float 15s infinite alternate ease-in-out;
-            opacity: 0.6;
+            opacity: 0.5;
+            pointer-events: none;
         }
 
         .orb-1 {
@@ -44,7 +57,7 @@
             left: -10%;
             width: 50vw;
             height: 50vw;
-            background: radial-gradient(circle, rgba(79,172,254,0.4) 0%, rgba(0,0,0,0) 70%);
+            background: radial-gradient(circle, rgba(79,172,254,0.3) 0%, rgba(0,0,0,0) 70%);
         }
 
         .orb-2 {
@@ -52,7 +65,7 @@
             right: -10%;
             width: 60vw;
             height: 60vw;
-            background: radial-gradient(circle, rgba(0,242,254,0.3) 0%, rgba(0,0,0,0) 70%);
+            background: radial-gradient(circle, rgba(0,242,254,0.2) 0%, rgba(0,0,0,0) 70%);
             animation-delay: -5s;
         }
 
@@ -61,13 +74,22 @@
             100% { transform: translate(100px, 50px) scale(1.2); }
         }
 
+        /* Dark overlay to make text readable over the chart */
+        .overlay {
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: radial-gradient(circle at center, transparent 0%, #050505 100%);
+            z-index: -3;
+            pointer-events: none;
+        }
+
         /* Glassmorphism Navigation */
         nav {
             display: flex;
             justify-content: space-between;
             align-items: center;
             padding: 20px 5%;
-            background: rgba(5, 5, 5, 0.4);
+            background: rgba(5, 5, 5, 0.6);
             backdrop-filter: blur(16px);
             -webkit-backdrop-filter: blur(16px);
             border-bottom: 1px solid var(--glass-border);
@@ -102,17 +124,18 @@
             line-height: 1.1;
             margin-bottom: 20px;
             font-weight: 900;
-            text-shadow: 0 0 40px rgba(0, 242, 254, 0.3);
+            text-shadow: 0 5px 20px rgba(0, 0, 0, 0.8), 0 0 40px rgba(0, 242, 254, 0.3);
             letter-spacing: -2px;
         }
 
         .hero p {
             font-size: 1.2rem;
-            color: #a1a1aa;
+            color: #d4d4d8;
             max-width: 600px;
             margin-bottom: 40px;
             font-weight: 300;
             line-height: 1.6;
+            text-shadow: 0 2px 10px rgba(0,0,0,0.8);
         }
 
         /* Glowing Neon Button */
@@ -175,13 +198,14 @@
             width: 350px;
             transition: border-color 0.3s ease, box-shadow 0.3s ease;
             transform-style: preserve-3d;
-            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.8);
             cursor: pointer;
         }
 
         .card:hover {
             border-color: rgba(0, 242, 254, 0.5);
             box-shadow: 0 0 30px rgba(0, 242, 254, 0.15);
+            background: rgba(20, 20, 25, 0.6);
         }
 
         .card h3 {
@@ -190,34 +214,57 @@
             background: linear-gradient(to right, #fff, #a1a1aa);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            transform: translateZ(30px); /* 3D effect for text */
+            transform: translateZ(30px);
         }
 
         .card p {
-            color: #a1a1aa;
+            color: #d4d4d8;
             line-height: 1.6;
             font-weight: 300;
-            transform: translateZ(20px); /* 3D effect for text */
-        }
-
-        /* Grid Background Pattern */
-        .bg-grid {
-            position: fixed;
-            top: 0; left: 0; width: 100%; height: 100%;
-            background-image: 
-                linear-gradient(rgba(255,255,255,0.03) 1px, transparent 1px),
-                linear-gradient(90deg, rgba(255,255,255,0.03) 1px, transparent 1px);
-            background-size: 50px 50px;
-            z-index: -2;
-            pointer-events: none;
+            transform: translateZ(20px);
         }
 
     </style>
 </head>
 <body>
 
-    <!-- Background Elements -->
-    <div class="bg-grid"></div>
+    <!-- Live TradingView Background -->
+    <div class="chart-bg">
+        <div class="tradingview-widget-container">
+            <div id="tradingview_bg"></div>
+            <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+            <script type="text/javascript">
+            new TradingView.widget({
+                "autosize": true,
+                "symbol": "BINANCE:BTCUSDT", /* جفت ارز بیت‌کوین/تتر برای نوسان بالا */
+                "interval": "1", /* تایم‌فریم ۱ دقیقه‌ای برای اینکه نوسان لایو دیده بشه */
+                "timezone": "Etc/UTC",
+                "theme": "dark",
+                "style": "1", /* استایل کندل‌استیک */
+                "locale": "en",
+                "enable_publishing": false,
+                "backgroundColor": "#050505", /* هماهنگ با رنگ پس‌زمینه سایت */
+                "gridColor": "rgba(255, 255, 255, 0.05)",
+                "hide_top_toolbar": true, /* مخفی کردن ابزارهای اضافه */
+                "hide_legend": true,
+                "save_image": false,
+                "container_id": "tradingview_bg",
+                "hide_volume": true,
+                "disabled_features": [
+                    "header_widget",
+                    "left_toolbar",
+                    "control_bar",
+                    "timeframes_toolbar"
+                ]
+            });
+            </script>
+        </div>
+    </div>
+
+    <!-- Gradient Vignette to darken edges -->
+    <div class="overlay"></div>
+
+    <!-- Holographic Orbs -->
     <div class="orb orb-1"></div>
     <div class="orb orb-2"></div>
 
