--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <style>
         :root {
             --bg: #050505;
-            --glass: rgba(15, 15, 20, 0.4);
-            --glass-border: rgba(255, 255, 255, 0.08);
+            --glass: rgba(15, 15, 20, 0.6); /* شیشه کمی تاریک‌تر برای خوانایی بهتر */
+            --glass-border: rgba(255, 255, 255, 0.1);
             --cyan: #00f2fe;
             --purple: #4facfe;
         }
@@ -28,7 +28,7 @@
             min-height: 100vh;
         }
 
-        /* Live Trading Chart Background */
+        /* Live Trading Chart Background - Now Fully Visible! */
         .chart-bg {
             position: fixed;
             top: -5%;
@@ -36,19 +36,19 @@
             width: 110vw;
             height: 110vh;
             z-index: -4;
-            opacity: 0.25; /* شفافیت چارت برای خوانایی متن‌ها */
-            pointer-events: none; /* جلوگیری از تداخل چارت با کلیک‌های موس */
-            filter: contrast(1.2) grayscale(0.2); /* کمی تنظیم رنگ برای هماهنگی با تم دارک */
+            opacity: 0.85; /* افزایش شفافیت به ۸۵ درصد برای وضوح کامل کندل‌ها */
+            pointer-events: none; /* جلوگیری از تداخل کلیک */
+            /* فیلترهای تاریک‌کننده حذف شدند تا رنگ‌ها زنده بمانند */
         }
 
-        /* Ambient Holographic Background Orbs (Kept for the Web3 vibe) */
+        /* Ambient Holographic Background Orbs */
         .orb {
             position: absolute;
             border-radius: 50%;
             filter: blur(120px);
             z-index: -2;
             animation: float 15s infinite alternate ease-in-out;
-            opacity: 0.5;
+            opacity: 0.4;
             pointer-events: none;
         }
 
@@ -74,11 +74,11 @@
             100% { transform: translate(100px, 50px) scale(1.2); }
         }
 
-        /* Dark overlay to make text readable over the chart */
+        /* Soft vignette overlay so edges merge with the dark theme */
         .overlay {
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100%;
-            background: radial-gradient(circle at center, transparent 0%, #050505 100%);
+            background: radial-gradient(circle at center, rgba(5,5,5,0.1) 0%, rgba(5,5,5,0.8) 100%);
             z-index: -3;
             pointer-events: none;
         }
@@ -89,7 +89,7 @@
             justify-content: space-between;
             align-items: center;
             padding: 20px 5%;
-            background: rgba(5, 5, 5, 0.6);
+            background: rgba(5, 5, 5, 0.7);
             backdrop-filter: blur(16px);
             -webkit-backdrop-filter: blur(16px);
             border-bottom: 1px solid var(--glass-border);
@@ -117,6 +117,8 @@
             text-align: center;
             padding: 0 20px;
             position: relative;
+            /* هاله تاریک پشت متن برای اینکه روی چارت روشن خوانا بماند */
+            background: radial-gradient(circle at center, rgba(0,0,0,0.7) 0%, transparent 60%);
         }
 
         .hero h1 {
@@ -124,18 +126,18 @@
             line-height: 1.1;
             margin-bottom: 20px;
             font-weight: 900;
-            text-shadow: 0 5px 20px rgba(0, 0, 0, 0.8), 0 0 40px rgba(0, 242, 254, 0.3);
+            text-shadow: 0 5px 20px rgba(0, 0, 0, 1), 0 0 40px rgba(0, 242, 254, 0.3);
             letter-spacing: -2px;
         }
 
         .hero p {
             font-size: 1.2rem;
-            color: #d4d4d8;
+            color: #e4e4e7;
             max-width: 600px;
             margin-bottom: 40px;
             font-weight: 300;
             line-height: 1.6;
-            text-shadow: 0 2px 10px rgba(0,0,0,0.8);
+            text-shadow: 0 2px 10px rgba(0,0,0,1);
         }
 
         /* Glowing Neon Button */
@@ -190,22 +192,22 @@
         /* Individual Glass Card */
         .card {
             background: var(--glass);
-            backdrop-filter: blur(20px);
-            -webkit-backdrop-filter: blur(20px);
+            backdrop-filter: blur(25px); /* بلور بیشتر برای تمایز از چارت */
+            -webkit-backdrop-filter: blur(25px);
             border: 1px solid var(--glass-border);
             border-radius: 24px;
             padding: 40px;
             width: 350px;
-            transition: border-color 0.3s ease, box-shadow 0.3s ease;
+            transition: border-color 0.3s ease, box-shadow 0.3s ease, transform 0.1s;
             transform-style: preserve-3d;
-            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.8);
+            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.9);
             cursor: pointer;
         }
 
         .card:hover {
-            border-color: rgba(0, 242, 254, 0.5);
-            box-shadow: 0 0 30px rgba(0, 242, 254, 0.15);
-            background: rgba(20, 20, 25, 0.6);
+            border-color: rgba(0, 242, 254, 0.6);
+            box-shadow: 0 0 30px rgba(0, 242, 254, 0.2);
+            background: rgba(20, 20, 25, 0.8);
         }
 
         .card h3 {
@@ -236,16 +238,16 @@
             <script type="text/javascript">
             new TradingView.widget({
                 "autosize": true,
-                "symbol": "BINANCE:BTCUSDT", /* جفت ارز بیت‌کوین/تتر برای نوسان بالا */
-                "interval": "1", /* تایم‌فریم ۱ دقیقه‌ای برای اینکه نوسان لایو دیده بشه */
+                "symbol": "BINANCE:BTCUSDT",
+                "interval": "1", /* تایم فریم یک دقیقه برای نوسان لایو */
                 "timezone": "Etc/UTC",
                 "theme": "dark",
-                "style": "1", /* استایل کندل‌استیک */
+                "style": "1", /* استایل کندل استیک */
                 "locale": "en",
                 "enable_publishing": false,
-                "backgroundColor": "#050505", /* هماهنگ با رنگ پس‌زمینه سایت */
-                "gridColor": "rgba(255, 255, 255, 0.05)",
-                "hide_top_toolbar": true, /* مخفی کردن ابزارهای اضافه */
+                "backgroundColor": "#050505", 
+                "gridColor": "rgba(0, 0, 0, 0)", /* مخفی کردن خطوط شطرنجی پس‌زمینه چارت */
+                "hide_top_toolbar": true,
                 "hide_legend": true,
                 "save_image": false,
                 "container_id": "tradingview_bg",
@@ -261,7 +263,7 @@
         </div>
     </div>
 
-    <!-- Gradient Vignette to darken edges -->
+    <!-- Gradient Vignette to darken edges slightly -->
     <div class="overlay"></div>
 
     <!-- Holographic Orbs -->
