--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             --glass-border: rgba(255, 255, 255, 0.1);
             --cyan: #00f2fe;
             --purple: #4facfe;
-            --nav-height: 75px; /* ارتفاع دقیق منو */
+            --nav-height: 75px;
         }
 
         * {
@@ -29,7 +29,6 @@
             min-height: 100vh;
         }
 
-        /* --- منوی بالایی فیکس شد --- */
         nav {
             display: flex;
             justify-content: space-between;
@@ -55,7 +54,6 @@
             letter-spacing: 1px;
         }
 
-        /* --- بج‌های هدر (نشانگر لایو بیت‌کوین و ورژن) --- */
         .nav-badges {
             display: flex;
             gap: 15px;
@@ -74,12 +72,13 @@
             align-items: center;
             gap: 8px;
             letter-spacing: 0.5px;
+            transition: all 0.3s ease;
         }
 
         .pulse-dot {
             width: 8px;
             height: 8px;
-            background-color: #10b981; /* سبز روشن */
+            background-color: #10b981;
             border-radius: 50%;
             box-shadow: 0 0 12px #10b981;
             animation: pulse 2s infinite cubic-bezier(0.4, 0, 0.6, 1);
@@ -90,15 +89,14 @@
             50% { opacity: 0.4; transform: scale(1.3); }
         }
 
-        /* --- تنظیم دقیق چارت برای جلوگیری از رفتن زیر منو --- */
         .chart-bg {
             position: fixed;
-            top: var(--nav-height); /* شروع چارت دقیقاً از زیر منو */
+            top: var(--nav-height);
             left: 0;
             right: 0;
             bottom: 0;
             width: 100%;
-            height: calc(100vh - var(--nav-height)); /* کسر کردن ارتفاع منو از کل صفحه */
+            height: calc(100vh - var(--nav-height));
             z-index: -4;
             opacity: 0.85; 
             pointer-events: none;
@@ -118,7 +116,6 @@
             height: 100%;
         }
 
-        /* --- افکت‌های گرافیکی پس‌زمینه --- */
         .orb {
             position: absolute;
             border-radius: 50%;
@@ -153,9 +150,8 @@
             pointer-events: none;
         }
 
-        /* --- محتوای اصلی --- */
         .hero {
-            min-height: calc(100vh - var(--nav-height)); /* تنظیم ارتفاع هیرو با کسر منو */
+            min-height: calc(100vh - var(--nav-height));
             margin-top: var(--nav-height);
             display: flex;
             flex-direction: column;
@@ -269,10 +265,9 @@
 
     <nav>
         <div class="logo">QuantForge.IO</div>
-        <!-- اضافه شدن نشانگر لایو به هدر -->
         <div class="nav-badges">
             <div class="badge">
-                <span class="pulse-dot"></span> LIVE: BTC/USDT
+                <span class="pulse-dot"></span> <span id="live-symbol-badge">LIVE: INITIALIZING...</span>
             </div>
             <div class="badge" style="color: #a1a1aa; font-weight: 300; background: transparent;">v1.0.0 Alpha</div>
         </div>
@@ -283,23 +278,87 @@
             <div id="tradingview_bg"></div>
             <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
             <script type="text/javascript">
-            new TradingView.widget({
-                "autosize": true,
-                "symbol": "BINANCE:BTCUSDT",
-                "interval": "1", 
-                "timezone": "Etc/UTC",
-                "theme": "dark",
-                "style": "1",
-                "locale": "en",
-                "enable_publishing": false,
-                "backgroundColor": "#050505", 
-                "gridColor": "rgba(0, 0, 0, 0)",
-                "hide_top_toolbar": true,
-                "hide_legend": false, /* تغییر به False تا اطلاعات روی چارت نمایش داده شود */
-                "save_image": false,
-                "container_id": "tradingview_bg",
-                "hide_volume": true
-            });
+                // لیست ۵۰ دارایی استراتژیک (طلا/نقره با OANDA، فارکس با FXCM، کریپتو با BINANCE)
+                const markets = [
+                    /* Metals - OANDA */
+                    { tv: "OANDA:XAUUSD", display: "XAU/USD (Gold)" },
+                    { tv: "OANDA:XAGUSD", display: "XAG/USD (Silver)" },
+                    /* Forex - FXCM */
+                    { tv: "FXCM:EURUSD", display: "EUR/USD" },
+                    { tv: "FXCM:GBPUSD", display: "GBP/USD" },
+                    { tv: "FXCM:USDJPY", display: "USD/JPY" },
+                    { tv: "FXCM:AUDUSD", display: "AUD/USD" },
+                    { tv: "FXCM:USDCAD", display: "USD/CAD" },
+                    { tv: "FXCM:USDCHF", display: "USD/CHF" },
+                    { tv: "FXCM:NZDUSD", display: "NZD/USD" },
+                    { tv: "FXCM:EURGBP", display: "EUR/GBP" },
+                    { tv: "FXCM:EURJPY", display: "EUR/JPY" },
+                    { tv: "FXCM:GBPJPY", display: "GBP/JPY" },
+                    { tv: "FXCM:AUDJPY", display: "AUD/JPY" },
+                    { tv: "FXCM:EURCHF", display: "EUR/CHF" },
+                    { tv: "FXCM:GBPCHF", display: "GBP/CHF" },
+                    { tv: "FXCM:EURAUD", display: "EUR/AUD" },
+                    { tv: "FXCM:GBPAUD", display: "GBP/AUD" },
+                    { tv: "FXCM:AUDNZD", display: "AUD/NZD" },
+                    { tv: "FXCM:CADJPY", display: "CAD/JPY" },
+                    { tv: "FXCM:NZDJPY", display: "NZD/JPY" },
+                    { tv: "FXCM:CHFJPY", display: "CHF/JPY" },
+                    /* Crypto - BINANCE */
+                    { tv: "BINANCE:BTCUSDT", display: "BTC/USDT" },
+                    { tv: "BINANCE:ETHUSDT", display: "ETH/USDT" },
+                    { tv: "BINANCE:SOLUSDT", display: "SOL/USDT" },
+                    { tv: "BINANCE:BNBUSDT", display: "BNB/USDT" },
+                    { tv: "BINANCE:XRPUSDT", display: "XRP/USDT" },
+                    { tv: "BINANCE:ADAUSDT", display: "ADA/USDT" },
+                    { tv: "BINANCE:DOGEUSDT", display: "DOGE/USDT" },
+                    { tv: "BINANCE:AVAXUSDT", display: "AVAX/USDT" },
+                    { tv: "BINANCE:LINKUSDT", display: "LINK/USDT" },
+                    { tv: "BINANCE:DOTUSDT", display: "DOT/USDT" },
+                    { tv: "BINANCE:MATICUSDT", display: "MATIC/USDT" },
+                    { tv: "BINANCE:SHIBUSDT", display: "SHIB/USDT" },
+                    { tv: "BINANCE:LTCUSDT", display: "LTC/USDT" },
+                    { tv: "BINANCE:ATOMUSDT", display: "ATOM/USDT" },
+                    { tv: "BINANCE:NEARUSDT", display: "NEAR/USDT" },
+                    { tv: "BINANCE:UNIUSDT", display: "UNI/USDT" },
+                    { tv: "BINANCE:APTUSDT", display: "APT/USDT" },
+                    { tv: "BINANCE:ARBUSDT", display: "ARB/USDT" },
+                    { tv: "BINANCE:INJUSDT", display: "INJ/USDT" },
+                    { tv: "BINANCE:RNDRUSDT", display: "RNDR/USDT" },
+                    { tv: "BINANCE:OPUSDT", display: "OP/USDT" },
+                    { tv: "BINANCE:FTMUSDT", display: "FTM/USDT" },
+                    { tv: "BINANCE:SUIUSDT", display: "SUI/USDT" },
+                    { tv: "BINANCE:SEIUSDT", display: "SEI/USDT" },
+                    { tv: "BINANCE:TIAUSDT", display: "TIA/USDT" },
+                    { tv: "BINANCE:FETUSDT", display: "FET/USDT" },
+                    { tv: "BINANCE:PEPEUSDT", display: "PEPE/USDT" },
+                    { tv: "BINANCE:WIFUSDT", display: "WIF/USDT" },
+                    { tv: "BINANCE:GALAUSDT", display: "GALA/USDT" }
+                ];
+
+                // انتخاب یک مارکت تصادفی از لیست ۵۰ تایی
+                const randomMarket = markets[Math.floor(Math.random() * markets.length)];
+
+                // آپدیت کردن متن نشانگر لایو در منوی بالا
+                document.getElementById('live-symbol-badge').innerText = 'LIVE: ' + randomMarket.display;
+
+                // ساخت چارت با نماد انتخاب شده
+                new TradingView.widget({
+                    "autosize": true,
+                    "symbol": randomMarket.tv,
+                    "interval": "1", 
+                    "timezone": "Etc/UTC",
+                    "theme": "dark",
+                    "style": "1",
+                    "locale": "en",
+                    "enable_publishing": false,
+                    "backgroundColor": "#050505", 
+                    "gridColor": "rgba(0, 0, 0, 0)",
+                    "hide_top_toolbar": true,
+                    "hide_legend": false,
+                    "save_image": false,
+                    "container_id": "tradingview_bg",
+                    "hide_volume": true
+                });
             </script>
         </div>
     </div>
